--- a/src/style.css
+++ b/src/style.css
@@ -5,17 +5,9 @@
 
 :root {
   font-family: "Space Grotesk", Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: black;
 }
 
 * {
@@ -24,6 +16,154 @@
   box-sizing: border-box;
 }
 
+.heading-container {
+  display: flex;
+  flex-direction: column;
+  font-size: 2rem;
+  padding-top: 5rem;
+}
+
+.welcome-heading {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  position: relative;
+  z-index: 1;
+  margin-bottom: -0.5rem;
+  padding-left: 1rem;
+  transform: translateY(20px);
+  transition: opacity 1s ease-out, transform 1s ease-out;
+
+  @media (width>930px) {
+    font-size: 3rem;
+  }
+}
+
+.paragraph-containers {
+  justify-content: center;
+  text-align: center;
+  font-size: 20px;
+  padding-top: 1.7rem;
+  width: 100%;
+  max-width: 900px;
+  margin: 0 auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  transform: translateY(20px);
+  transition: opacity 1s ease-out, transform 1s ease-out;
+}
+
 h1 {
+  display: flex;
+  justify-content: center;
+  text-align: center;
   font-weight: 900;
+  font-size: 3rem;
+  width: 100%;
+  transform: translateY(20px);
+  transition: opacity 1s ease-out, transform 1s ease-out;
+
+  @media (width>930px) {
+    font-size: 6rem;
+  }
+
+  @media (width>1100px) {
+    font-size: 7rem;
+  }
+}
+
+h2 {
+  display: flex;
+  justify-content: center;
+  font-weight: 900;
+  font-size: 2rem;
+  width: 100%;
+  padding-top: 3rem;
+}
+
+.card {
+  border: 2px solid #1a1a1a;
+  background-color: transparent;
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  max-width: 450px;
+  max-height: 800px;
+  overflow: hidden;
+  padding: 30px;
+  border-radius: 10px;
+  margin-top: 4rem;
+  box-shadow: 0 0 5px #e092d0, 0 0 20px #e092d0;
+}
+
+.card-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3rem;
+  transform: translateY(20px);
+  transition: opacity 1s ease-out, transform 1s ease-out;
+
+  @media (width>1445px) {
+    flex-direction: row;
+    justify-content: center;
+    gap: 5rem;
+  }
+}
+
+.card-image {
+  display: flex;
+  width: 100%;
+  min-width: 160px;
+  max-width: 400px;
+  padding-top: 1rem;
+}
+
+.card-content {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 570px;
+}
+
+.card-title {
+  font-weight: 900;
+  font-size: 1.7rem;
+  text-align: center;
+  text-decoration: underline;
+}
+
+.card-description {
+  max-width: 490px;
+  font-weight: 600;
+  text-align: center;
+  padding-top: 1rem;
+}
+
+.card-links {
+  width: 100%;
+  max-width: 300px;
+  display: flex;
+  flex-direction: column;
+  padding-top: 2rem;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.card-link {
+  text-decoration: underline;
+  max-width: 490px;
+  font-weight: 600;
+}
+
+.card-link:hover {
+  color: green;
+}
+
+.built-with {
+  max-width: 490px;
+  font-weight: 400;
+  font-size: 12px;
+  padding-top: 1rem;
+  text-align: center;
 }
