--- a/src/style.css
+++ b/src/style.css
@@ -20,7 +20,7 @@
   display: flex;
   flex-direction: column;
   font-size: 2rem;
-  padding-top: 5rem;
+  padding-top: 12rem;
 }
 
 .welcome-heading {
@@ -76,9 +76,9 @@ h2 {
   display: flex;
   justify-content: center;
   font-weight: 900;
-  font-size: 2rem;
+  font-size: 3rem;
   width: 100%;
-  padding-top: 3rem;
+  padding-top: 4rem;
 }
 
 .card {
@@ -93,7 +93,7 @@ h2 {
   padding: 30px;
   border-radius: 10px;
   margin-top: 4rem;
-  box-shadow: 0 0 5px #e092d0, 0 0 20px #e092d0;
+  box-shadow: 0 0 5px #b4dafe, 0 0 40px #2a8dea;
 }
 
 .card-container {
@@ -103,6 +103,7 @@ h2 {
   gap: 3rem;
   transform: translateY(20px);
   transition: opacity 1s ease-out, transform 1s ease-out;
+  padding-bottom: 9rem;
 
   @media (width>1445px) {
     flex-direction: row;
@@ -157,7 +158,7 @@ h2 {
 }
 
 .card-link:hover {
-  color: green;
+  color: #faa7d2;
 }
 
 .built-with {
@@ -166,4 +167,43 @@ h2 {
   font-size: 12px;
   padding-top: 1rem;
   text-align: center;
+}
+
+.github-profile-container {
+  border: 2px solid #1a1a1a;
+  background-color: transparent;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  max-width: 800px;
+  max-height: 400px;
+  padding: 30px;
+  border-radius: 10px;
+  margin-top: 9rem;
+  box-shadow: 0 0 5px #b4dafe, 0 0 40px #2a8dea;
+  margin: 0 auto;
+  margin-bottom: 5rem;
+}
+
+.github-profile-link {
+  justify-content: center;
+  text-align: center;
+  font-size: 20px;
+  padding-top: 1.7rem;
+  width: 100%;
+  max-width: 900px;
+  margin: 0 auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  transform: translateY(20px);
+  transition: opacity 1s ease-out, transform 1s ease-out;
+  padding-bottom: 8rem;
+  font-size: 1.6rem;
+  text-decoration: underline;
+}
+
+.github-profile-link:hover {
+  cursor: pointer;
+  color: #b4dafe;
 }
