--- a/src/style.css
+++ b/src/style.css
@@ -186,6 +186,15 @@ h2 {
   margin-bottom: 5rem;
 }
 
+.fa-github {
+  padding-right: 1rem;
+}
+
+.fa-github:hover {
+  cursor: pointer;
+  color: #b4dafe;
+}
+
 .github-profile-link {
   justify-content: center;
   text-align: center;
